scooter/tests/snapshots/app_runner__Text wrapping disabled.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot
---
                                     scooter                                    
   ┌Search text───────────────────────────────────────────────────────────┐    
   │users                                                                 │    
   └──────────────────────────────────────────────────────────────────────┘    
   ┌Replace text──────────────────────────────────────────────────────────┐    
   │REPLACED                                                              │    
   └──────────────────────────────────────────────────────────────────────┘    
                                                                               
   Results: 1 [Search complete]                       [Time taken: TIME]     
                                                                               
   [x] file1.txt:2                                                      (1)    
                                                                               
                                                                               
                                                                               
                                                                               
                                                                               
     This is a file with                                                       
   - some very long lines of text. Lots of text which won't fit on one line    
   + some very long lines of text. Lots of text which won't fit on one line    
     Some more lines here which aren't                                         
     quite as long.                                                            
                                                                               
                                                                               
space> toggle / <C-o> back to search fields / <enter> replace selected / <C-h>
