scooter/tests/snapshots/app_runner__custom_help_menu_keybinding.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot
---
                                               scooter                                              
    ┌Search text─────────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌Replace text────────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌───┐                                                                                          
    │  ┌───────────────────────────────────────Help────────────────────────────────────────┐       
    └──│  <enter>  jump to results                                                         │       
    ┌──│    <tab>  focus next                                                              │       
    │  │  <S-tab>  focus previous                                                          │       
    └──│  <space>  toggle checkbox                                                         │       
    ┌──│    <A-u>  unlock pre-populated fields                                             │       
    │ X│    <C-l>  toggle text wrapping in preview                                         │       
    └──│    <C-t>  toggle hidden files                                                     │       
    ┌Fi│    <A-m>  toggle multiline                                                        │─┐     
    │  │    <A-e>  toggle escape sequences                                                 │ │     
    └──│    <C-r>  reset                                                                   │─┘     
    ┌Fi│     <F1>  help                                                                    │─┐     
    │  │    <esc>  close popup                                                             │ │     
    └──│    <C-c>  quit                                                                    │─┘     
       └───────────────────────────────────────────────────────────────────────────────────┘       
    Results: 0 [Search is empty]                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
         <enter> jump to results / <tab> focus next / <C-r> reset / <F1> help / <C-c> quit
