scooter/tests/snapshots/app_runner__multiline_replacement_results_screen.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot.as_ref()
---
                                                                                scooter                                                                               
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                              Success!                                                                               
                                                                                                                                                                     
       ┌Successful replacements (lines):────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │2                                                                                                                                                   │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
       ┌Ignored (lines):────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │0                                                                                                                                                   │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
       ┌Errors:─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │0                                                                                                                                                   │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                <C-r> reset / <C-h> help / <C-c> quit
