scooter/tests/snapshots/app_runner__multiline_search_preview_result_1.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot.as_ref()
---
                                                                                scooter                                                                               
       ┌Search text─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │foo bar\nbaz                                                                                                                                        │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
       ┌Replace text────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │REPLACED                                                                                                                                            │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
                                                                                                                                                                     
       Results: 2 [Search complete]                                                                                                     [Time taken: TIME]         
                                                                                                                                                                     
       [x] file1.txt:2                                          (1)   line 1                                                                                         
       [x] file1.txt:5                                          (2) - foo bar                                                                                        
                                                                    - baz qux                                                                                        
                                                                    + REPLACED qux                                                                                   
                                                                      line 4                                                                                         
                                                                      foo bar                                                                                        
                                                                      baz qux                                                                                        
                                                                      line 7                                                                                         
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                  <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit
